初期画面No1まで実装完了

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,4 +34,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
+  assets:
+    - assets/images/init_1_view/can_change_cocktail_and_money.png
